{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 26,
  "lineage": "fd869ca3-289a-ca24-2189-f3414418e806",
  "resources": [
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkInterfaces/taskmanager-prod-vm-nic",
            "internal_domain_name_suffix": "wsfgjjqfyilulhtyb4wzwhf2xg.zrhx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/publicIPAddresses/taskmanager-prod-vm-pip",
                "subnet_id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "switzerlandnorth",
            "mac_address": "7C-ED-8D-43-99-8D",
            "name": "taskmanager-prod-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "taskmanager-prod-rg",
            "tags": {
              "Component": "Networking",
              "CostCenter": "DevOps-Portfolio",
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "chedli.masmoudi01@gmail.com",
              "Project": "TaskManager"
            },
            "virtual_machine_id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Compute/virtualMachines/taskmanager-prod-vm"
          },
          "dependencies": [
            "module.infrastructure.azurerm_public_ip.vm",
            "module.infrastructure.azurerm_resource_group.main",
            "module.infrastructure.azurerm_subnet.app",
            "module.infrastructure.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg",
            "location": "switzerlandnorth",
            "name": "taskmanager-prod-app-nsg",
            "resource_group_name": "taskmanager-prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "102.156.242.116/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Component": "Security",
              "CostCenter": "DevOps-Portfolio",
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "chedli.masmoudi01@gmail.com",
              "Project": "TaskManager"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "taskmanager-prod-app-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "taskmanager-prod-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.azurerm_network_security_group.app",
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_https",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "taskmanager-prod-app-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "taskmanager-prod-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.azurerm_network_security_group.app",
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "taskmanager-prod-app-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "taskmanager-prod-rg",
            "source_address_prefix": "102.156.242.116/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.azurerm_network_security_group.app",
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "taskmanager-prod-app-nsg",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "taskmanager-prod-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.azurerm_network_security_group.app",
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/publicIPAddresses/taskmanager-prod-vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.199.177.125",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "taskmanager-prod-vm-pip",
            "resource_group_name": "taskmanager-prod-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Component": "Networking",
              "CostCenter": "DevOps-Portfolio",
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "chedli.masmoudi01@gmail.com",
              "Project": "TaskManager"
            }
          },
          "dependencies": [
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-app-subnet",
            "name": "taskmanager-prod-app-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "taskmanager-prod-rg",
            "virtual_network_name": "taskmanager-prod-vnet"
          },
          "dependencies": [
            "module.infrastructure.azurerm_resource_group.main",
            "module.infrastructure.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-data-subnet",
            "name": "taskmanager-prod-data-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "taskmanager-prod-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "taskmanager-prod-vnet"
          },
          "dependencies": [
            "module.infrastructure.azurerm_resource_group.main",
            "module.infrastructure.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-app-subnet",
            "network_security_group_id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg",
            "subnet_id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-app-subnet"
          },
          "dependencies": [
            "module.infrastructure.azurerm_network_security_group.app",
            "module.infrastructure.azurerm_resource_group.main",
            "module.infrastructure.azurerm_subnet.app",
            "module.infrastructure.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a6648ab4-c205-4517-9e78-0fad9b1cbcbe",
            "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet",
            "location": "switzerlandnorth",
            "name": "taskmanager-prod-vnet",
            "resource_group_name": "taskmanager-prod-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-app-subnet",
                "name": "taskmanager-prod-app-subnet",
                "security_group": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/networkSecurityGroups/taskmanager-prod-app-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0d1fdf84-878c-482f-ae35-e26ebd56f136/resourceGroups/taskmanager-prod-rg/providers/Microsoft.Network/virtualNetworks/taskmanager-prod-vnet/subnets/taskmanager-prod-data-subnet",
                "name": "taskmanager-prod-data-subnet"
              }
            ],
            "tags": {
              "Component": "Networking",
              "CostCenter": "DevOps-Portfolio",
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Owner": "chedli.masmoudi01@gmail.com",
              "Project": "TaskManager"
            }
          },
          "dependencies": [
            "module.infrastructure.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}